# RechOp

./: .gitignore  CMakeLists.txt  CMakeSettings.json  Instance-plus-propre.csv  RechOP.cpp  RechOP.h  main.cpp  main.h  solution.txt  traitement.cpp  traitement.h
EXO_1/: Miniprojet_exo1_Q1.py  Miniprojet_exo1_Q2.py  Resultats_exo1_Q1.txt  Resultats_exo1_Q2.txt  results.yml
data/: IO.cpp  IO.h  data_types.h
data/parseur/: CMakeLists.txt  parseur.cpp  parseur.h
parseur/: main.cpp  parseur.cpp  parseur.h  solution.txt
